# GDR-archive-tools

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  download-resources.sh  download_resources.bat
.shci/: linux-log.md  windows-log.md
.shci/linux/: build-output.txt  log.md  prerequisites-output.txt
.shci/windows/: build-output.txt  build.bat  log.md
GaiaArchiveTools/include/gaia-archive-tools/: gaiaArchiveTools.h
GaiaArchiveTools/include/gaia_archive_tools/: gaiaArchiveTools.h
GaiaArchiveTools/src/: gaia-exp.c  gaia-split.c  gaiaArchiveTools.c
Gaia_Archive_Tools/src/: gaia_archive_tools.c  main.c
gaia-archive-tools/include/gaia-archive-tools/: gaiaArchiveTools.h
gaia-archive-tools/src/: gaia-archive-tools.c  gaia-exp.c  gaia-split.c
gaia-convert-example/src/: main.c
gaia-exp/src/: gaia-exp.c
gaia-read-example/src/: gaia-read-example.c  main.c
gaia-split/src/: gaia-split.c
gaia_archive_converter/include/gaia_archive_converter/: gaia_archive_converter.h
gaia_archive_converter/src/: gaia_archive_converter.c  main.c
gaia_read_example/src/: main.c
reference/: 13.5.2 gaia_universe_model‣ 13.5 Simulation tables ‣ Chapter 13 Datamodel description ‣ Part IV Gaia archive ‣ Gaia Early Data Release 3 Documentation release 1.1.html
reference/13.5.2 gaia_universe_model‣ 13.5 Simulation tables ‣ Chapter 13 Datamodel description ‣ Part IV Gaia archive ‣ Gaia Early Data Release 3 Documentation release 1.1_files/: collapse.js.download  esdc_a.css  gaia_index-8-2-2.css
samples/src/: gaia-convert.c  gaia-read.c
scripts/: compress_catalogues.py  convert-catalogues.py  convert_catalogues.py  download-catalogues.py  download-release.py  download-resources.py  download_catalogues.py  split-catalogues.py  split_catalogues.py
